# otus-cpp.googlehelloworld

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
docs/: Doxyfile
src/: CMakeLists.txt  my_local.h  version_lib.cpp  version_lib.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  test_example.cpp
